# vigilops-python

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-15-decorators.md
examples/: bug_triage.py  decorator_agent.py  looping_agent.py  research.py  salam.py  tools.py
examples/_fixture_buggy/: checkout.py  orders.py
keelwave/: __init__.py  _client.py  _context.py  _exceptions.py  async_client.py  async_run.py  client.py  decorators.py  run.py
keelwave/adapters/: anthropic.py  openai.py  pydantic_ai.py
src/vigil/: __init__.py  _client.py  _context.py  async_client.py  async_run.py  client.py  run.py
src/vigil/adapters/: anthropic.py  openai.py  pydantic_ai.py
tests/: conftest.py  test_async_client.py  test_async_run.py  test_client.py  test_decorators.py  test_pydantic_ai.py  test_run.py
vigilops/: __init__.py  _context.py  _exceptions.py  async_client.py  async_run.py  client.py  decorators.py  run.py
vigilops/adapters/: anthropic.py  openai.py  pydantic_ai.py
