[project]
name = "vigil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yusufnuru", email = "yusufnuru2002@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anthropic>=0.109.1",
    "ddgs>=9.14.4",
    "openai>=2.41.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
env_files = [".env", ".env.test"]   
