[project]
name = "vigilops"
version = "0.1.0"
description = "Python SDK for the vigilops observability platform"
readme = "README.md"
authors = [
    { name = "yusufnuru", email = "developers@vigilops.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-ai>=1.107.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
# Basic protection against supply chain attacks
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "anthropic>=0.109.1",
    "ddgs>=9.14.4",
    "openai>=2.41.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
env_files = [".env", ".env.test"]
testpaths = ["tests"]
asyncio_mode = "strict"
