[project]
name = "keelwave"
version = "0.1.0"
description = "Python SDK for the keelwave observability platform"
readme = "README.md"
authors = [
    { name = "keelwave", email = "developers@keelwave.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-ai>=1.107.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "anthropic>=0.109.1",
    "ddgs>=9.14.4",
    "openai>=2.41.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-dotenv>=0.5.2",
    "mypy>=1.0.0,<2",
    "ruff>=0.15.16",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
cache_dir = ".mypy_cache"
sqlite_cache = true
incremental = true
show_column_numbers = true

[tool.pytest.ini_options]
env_files = [".env", ".env.test"]
testpaths = ["tests"]
asyncio_mode = "strict"
